--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,7 +1,7 @@
 # demo/CMakeLists.txt
 cmake_minimum_required(VERSION 3.10)
 
-add_library(demo
+add_executable(demo
 main.cpp)
 
-target_link_libraries(demo PUBLIC wsp tinyxml2 imgui spdlog)
+target_link_libraries(demo PRIVATE wsp tinyxml2 imgui spdlog)
