--- a/whisper/CMakeLists.txt
+++ b/whisper/CMakeLists.txt
@@ -10,20 +10,27 @@ file(GLOB WSP_SOURCES CONFIGURE_DEPENDS *.cpp)
 
 target_sources(whisper PRIVATE ${WSP_SOURCES})
 
-target_include_directories(whisper PUBLIC ${CMAKE_SOURCE_DIR}/.external/stb)
-target_include_directories(whisper PUBLIC ${CMAKE_SOURCE_DIR}/.external/Tracy/public)
+target_include_directories(whisper PUBLIC ${Tracy_SOURCE_DIR}/public)
 
 target_compile_definitions(whisper PRIVATE VULKAN_HPP_TYPESAFE_CONVERSION)
 target_compile_definitions(whisper PRIVATE TRACY_ENABLE)
 
 add_subdirectory(rendering)
 
-target_link_libraries(whisper PRIVATE TracyClient tinyxml2 imgui imguizmo tinyobjloader spdlog glfw ${Vulkan_LIBRARIES})
+target_link_libraries(
+  whisper
+  PRIVATE TracyClient
+          tinyxml2
+          imgui
+          tinyobjloader
+          spdlog
+          glfw
+          ${Vulkan_LIBRARIES})
 
 if(UNIX AND NOT APPLE)
   target_link_libraries(whisper PRIVATE dl pthread X11 Xxf86vm Xrandr Xi)
 endif()
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(whisper PRIVATE -Wno-cpp)
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
+  target_compile_options(whisper PRIVATE -Wno-cpp)
 endif()
