--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Whisper CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_subdirectory(tooling)
+
 include(FetchContent)
 
 add_compile_definitions(VULKAN_HPP_TYPESAFE_CONVERSION)
