--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 engine-assets/skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/alpes-skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/*-skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/venice-sunset-skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/workshop-skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/puresky-day-skybox.exr filter=lfs diff=lfs merge=lfs -text
+engine-assets/puresky-night-skybox.exr filter=lfs diff=lfs merge=lfs -text
