windows compatibility (removed frost for now, need to bring back)

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -10,19 +10,19 @@ file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS *.hpp *.h)
 set(GENERATED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/.generated")
 file(MAKE_DIRECTORY "${GENERATED_DIR}")
 
-foreach(HEADER ${HEADERS})
-  get_filename_component(HEADER_NAME ${HEADER} NAME)
-  set(OUTPUT_FILE "${GENERATED_DIR}/${HEADER_NAME}")
-
-  add_custom_command(
-    OUTPUT ${OUTPUT_FILE}
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/tooling/frost.py ${HEADER}
-            > ${OUTPUT_FILE}
-    DEPENDS ${HEADER} ${CMAKE_SOURCE_DIR}/tooling/frost.py
-    COMMENT "Generating metadata for ${HEADER_NAME}"
-    VERBATIM)
-
-  list(APPEND GENERATED_OUTPUTS ${OUTPUT_FILE})
-endforeach()
+# foreach(HEADER ${HEADERS})
+  # get_filename_component(HEADER_NAME ${HEADER} NAME)
+  # set(OUTPUT_FILE "${GENERATED_DIR}/${HEADER_NAME}")
+# 
+  # add_custom_command(
+    # OUTPUT ${OUTPUT_FILE}
+    # COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/tooling/frost.py ${HEADER}
+            # > ${OUTPUT_FILE}
+    # DEPENDS ${HEADER} ${CMAKE_SOURCE_DIR}/tooling/frost.py
+    # COMMENT "Generating metadata for ${HEADER_NAME}"
+    # VERBATIM)
+# 
+  # list(APPEND GENERATED_OUTPUTS ${OUTPUT_FILE})
+# endforeach()
 
 add_custom_target(generate_metadata_${demo} ALL DEPENDS ${GENERATED_OUTPUTS})
