--- a/whisper/CMakeLists.txt
+++ b/whisper/CMakeLists.txt
@@ -53,14 +53,14 @@ foreach(HEADER ${HEADERS})
   set(OUTPUT_FILE "${GENERATED_DIR}/${HEADER_NAME}.generated.hpp")
 
   # Use a unique custom command *only if it's not already declared*
-  if(NOT TARGET frost_gen_${HEADER_NAME})
-    add_custom_command(
-      OUTPUT ${OUTPUT_FILE}
-      COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/tooling/frost.py
-              ${HEADER} > ${OUTPUT_FILE}
-      DEPENDS ${HEADER} ${CMAKE_SOURCE_DIR}/tooling/frost.py
-      COMMENT "Generating metadata for ${HEADER_NAME}")
-    add_custom_target(frost_gen_${HEADER_NAME} DEPENDS ${OUTPUT_FILE})
-    add_dependencies(whisper frost_gen_${HEADER_NAME})
-  endif()
+  # if(NOT TARGET frost_gen_${HEADER_NAME})
+  #   add_custom_command(
+  #     OUTPUT ${OUTPUT_FILE}
+  #     COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/tooling/frost.py
+  #             ${HEADER} > ${OUTPUT_FILE}
+  #     DEPENDS ${HEADER} ${CMAKE_SOURCE_DIR}/tooling/frost.py
+  #     COMMENT "Generating metadata for ${HEADER_NAME}")
+  #   add_custom_target(frost_gen_${HEADER_NAME} DEPENDS ${OUTPUT_FILE})
+  #   add_dependencies(whisper frost_gen_${HEADER_NAME})
+  # endif()
 endforeach()
